hphp/hack/test/typecheck/reactive/test_freeze2.php.exp
File "test_freeze2.php", line 24, characters 3-4:
Variable $y is undefined, not always defined, or unset afterwards (did you mean $b instead?) (Naming[2050])
